Fix explore rows too close to header

--- a/static/style.css
+++ b/static/style.css
@@ -79,7 +79,7 @@ select {
 }
 
 .content {
-    margin-top: 5em;
+    margin-top: 6em;
     margin-bottom: 2em;
     margin-left: 5%;
     margin-right: 5%;
